hphp/hack/test/typecheck/expression_trees/splice_err2.php.like_types.exp
File "splice_err2.php", line 6, characters 13-19:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 35, characters 5-45:
  But got `dynamic` because it is an unenforceable type
File "splice_err2.php", line 9, characters 13-13:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 21, characters 6-43:
  But got `dynamic` because it is an unenforceable type
